--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,12 +1,12 @@
 #Minecraft server properties
-#Fri Jun 20 23:27:17 UTC 2025
+#Sun Jun 29 02:00:28 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -29,7 +29,7 @@ level-seed=
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=6
 max-tick-time=60000
 max-world-size=29999984
 motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
